Fix spacing of main content per page

--- a/public/css/order/order-view.css
+++ b/public/css/order/order-view.css
@@ -8,7 +8,7 @@
 .main-content {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 2rem;
   row-gap: 2rem;
 }
 
